# assembler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  F.l  LICENSE  address_counter.cpp  asm_lang.cpp  binary_data.h  binary_generator.cpp  bitwise_functions.h  compilation_unit_t.h  isa.cpp  lexer.h  main.cpp  program_options.cpp  semantic_analyzer.h  semantic_statement.cpp  semantic_statement.h  symbol_table.cpp  symbol_table.h  templates.h
elfio/: elfio.hpp
incl/: F.h  address_counter.h  asm_lang.h  binary.h  binary_generator.h  elf_generator.h  isa.h  lexer.h  program_options.h  semantic_statement.h  syntax.h
magic_enum/: magic_enum.hpp
src/: F.l  elf_generator.cpp  lexer.cpp  semantic_analyzer.cpp  semantic_statement.cpp  syntax.cpp
